Modified build.gradle and module-info.java